--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.1.1",
+    "@chakra-ui/react": "^2.4.4",
     "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.11.15",
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
